fix style spaces

--- a/main.tex
+++ b/main.tex
@@ -34,9 +34,7 @@ yaroslav.vorobev-2015@mail.ru}
 Saint-Petersburg, Russia \\
 gregra@mail.ru}
 
-\linebreakand
-
-\IEEEauthorblockN{Daria Vasina}
+\linebreakand\IEEEauthorblockN{Daria Vasina}
 \IEEEauthorblockA{
 \textit{ITMO University}\\
 Saint-Petersburg, Russia \\
